@@ -1,3 +1,4 @@
+22-may-2009 - adelikat - win32 - Hex Editor - allowed the user to customize the color scheme by use of RGB values stored in the .cfg file
 21-may-2009 - adelikat - win32 - reverted fixedFontHeight to 13 instead of 14.  Gave the option of adjusting the height by modifying RowHeightBorder in the .cfg file
 21-may-2009 - adelikat - win32 - made fullscreen toggle (Alt+Enter) remappable
 15-may-2009 - shinydoofy - sdl - added --subtitles
